modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/match_multiple_variable_binds_in_branch.gd
func test():
	match 1:
		[[[var a]]], 2:
			pass
